fixes colorPannel stretching for larger entries

--- a/src/style.css
+++ b/src/style.css
@@ -280,7 +280,7 @@ input {
     filter: drop-shadow(1px 1px 7px #000);
 }
 .cvContainer.left {
-    grid-template-columns: 1fr 3fr;
+    grid-template-columns: fit-content(65%) 3fr;
    grid-template-rows: auto auto 1fr;
 }
 .cvContainer.right {
@@ -300,7 +300,7 @@ input {
     grid-area: 1/1/4/2;
     display: flex;
     flex-direction: column;
-    
+    min-width: 230px;
 }
 .colorPannel.right {
     grid-area: 1/2/4/3;
@@ -368,6 +368,8 @@ input {
 
 .changingColor{
     overflow: hidden;
+    justify-self:end;
+    padding-right: 5px;
 }
 .changingColor img{
     filter: drop-shadow(0px 1000px 0 var(--textColor));
@@ -401,13 +403,13 @@ ul {
 }
 
 .pannelInfoHolder {
-    display: flex;
+    display: grid;
     align-items: center;
+    grid-template-columns: 55px 1fr;
     
 }
 .pannelInfoHolder.left, .pannelInfoHolder.right {
     justify-content: start;
-    margin-left: 15%;
     margin-bottom: 20px;
 }
 .pannelInfoHolder.top {
@@ -415,7 +417,7 @@ ul {
 }
 
 .pannelInfo {
-   margin-bottom: 20px;
+    margin-bottom: 20px;
     list-style: none;
 }
 
